<resources>
    <string name="app_name">PawtnerUp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AppName">PawtnerUp</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="name">name</string>
    <string name="report_found_pet">Report Found Pet</string>
    <string name="send_report">Send Report</string>
    <string name="what_pet_it_is">What pet it is?</string>
    <string name="where_is_it">Where is it?</string>
    <string name="describe_the_condition">Describe the condition</string>
    <string name="pawtnerup_web_client_id">
        1008095752587-o3smg1tmvagh4km2due6kbbrta6qvi4o.apps.googleusercontent.com
    </string>
    <string name="pawtnerup_mobile_client_id">
        1008095752587-c4ercsjckb0nlc3s5lt3ktlvvgd06hn1.apps.googleusercontent.com
    </string>

    <string name="pawtnerup_mobile_client_id_new">
        1008095752587-ku016r5npgs2p0jp6pgo7ii093e2kre0.apps.googleusercontent.com
    </string>

    <string name="reminder_header">Reminder</string>
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_summary">Daily reminder for nearest schedule of the day.</string>
    <string name="pref_notify_name">Notification</string>
    <string name="display_header">Display</string>
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="find_your_n_pawtner">Find Your \n Pawtner</string>
    <string name="sign_in">Sign In</string>
    <string name="setting">Setting</string>
    <string name="email">Email</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="privacy">Privacy</string>
    <string name="help_center">Help Center</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="submit">Submit</string>
    <string name="discover">Discover</string>
    <string name="label">Label</string>
    <string name="bio">Bio</string>
    <string name="about_this_dog">About this dog</string>
    <string name="breed">Breed</string>
    <string name="neutered">Neutered</string>
    <string name="status">Status</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="shelter_adress">Shelter Adress</string>
    <string name="shelter">Shelter</string>
    <string name="my_story">My Story</string>
    <string name="contact_now">Contact Now</string>
    <string name="label_1">Label 1</string>
    <string name="characteristic">Characteristic :</string>
</resources>