<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pawtnerup.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailRecommendationActivity"
            app:destination="@id/detailRecommendationActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.pawtnerup.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.pawtnerup.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_reportActivity2"
            app:destination="@id/reportActivity" />
        <action
            android:id="@+id/action_navigation_profile_to_settingActivity"
            app:destination="@id/settingActivity" />
    </fragment>
    <activity
        android:id="@+id/reportActivity"
        android:name="com.example.pawtnerup.ui.report.ReportActivity"
        android:label="activity_report"
        tools:layout="@layout/activity_report" />
    <activity
        android:id="@+id/cameraActivity"
        android:name="com.example.pawtnerup.ui.camera.CameraActivity"
        android:label="activity_camera"
        tools:layout="@layout/activity_camera" />
    <activity
        android:id="@+id/settingActivity"
        android:name="com.example.pawtnerup.ui.setting.SettingActivity"
        android:label="SettingActivity" />
    <activity
        android:id="@+id/breedQuestionnaireActivity"
        android:name="com.example.pawtnerup.ui.questionnaire.BreedQuestionnaireActivity"
        android:label="activity_breed_questionnaire"
        tools:layout="@layout/activity_breed_questionnaire" />
    <activity
        android:id="@+id/detailActivity"
        android:name="com.example.pawtnerup.ui.detail.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail" />
    <activity
        android:id="@+id/splashActivity"
        android:name="com.example.pawtnerup.ui.splash.SplashActivity"
        android:label="activity_splash"
        tools:layout="@layout/activity_splash" />
    <activity
        android:id="@+id/loadingActivity"
        android:name="com.example.pawtnerup.ui.splash.LoadingActivity"
        android:label="activity_loading"
        tools:layout="@layout/activity_loading" />
    <activity
        android:id="@+id/onboardingActivity"
        android:name="com.example.pawtnerup.ui.onboarding.OnboardingActivity"
        android:label="activity_onboarding"
        tools:layout="@layout/activity_onboarding" />
    <activity
        android:id="@+id/questionnaireActivity"
        android:name="com.example.pawtnerup.ui.questionnaire.QuestionnaireActivity"
        android:label="activity_questionnaire"
        tools:layout="@layout/activity_questionnaire" />
    <activity
        android:id="@+id/detailRecommendationActivity"
        android:name="com.example.pawtnerup.ui.detail.DetailRecommendationActivity"
        android:label="activity_detail_recommendation"
        tools:layout="@layout/activity_detail_recommendation" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.pawtnerup.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>